@@ -8,8 +8,6 @@ Carp = 0
 File::Find::Rule = 0
 JSON = 2
 List::Util = 0
-Module::Pluggable = 3.7
-Module::Pluggable::Object = 0
 Number::Tolerant = 0
 Scalar::Util = 0
 Test::More = 0
